[package]
name = "git-10x-history"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustygit = "0.4"
chrono = "0.4.23"
oorandom = {version = "11.1.3", default-features = false}
